# weld

weld/: Cargo.toml  build.rs
weld-hdrgen/src/: main.rs
weld-repl/src/: main.rs
weld/src/: lib.rs
weld/src/ast/: ast.rs
weld/src/codegen/: mod.rs
weld/src/codegen/cranelift/: builder.rs  entry.rs  layout.rs  mod.rs  module.rs
weld/src/optimizer/transforms/: loop_fusion_2.rs  unroller.rs
weld/src/runtime/: mod.rs
weld/src/syntax/: parser.rs
weld/tests/: basic_tests.rs
