[package]
name = "weld"
version = "0.4.0"
authors = ["Weld Developers <weld-group@lists.stanford.edu>"]
build = "build.rs"
description = "Weld is a language and runtime for improving the performance of data-intensive applications."
readme = "../README.md"
license = "BSD-3-Clause"
homepage = "https://www.weld.rs"
repository = "https://github.com/weld-project/weld"
edition = "2018"

[features]
default = ["cranelift_codegen"]
llvm_codegen = ["llvm-sys"]
cranelift_codegen = ["cranelift", "cranelift-module", "cranelift-simplejit", "cranelift-native", "cranelift-entity"]

[dependencies]
chrono = "0.4.0"
cranelift = { version="0.62.0", optional=true }
cranelift-module = { version="0.62.0", optional=true }
cranelift-simplejit = { version="0.62.0", optional=true }
cranelift-native = { version="0.62.0", optional=true }
cranelift-entity = { version="0.62.0", optional=true }

env_logger = "0.4.3"
fnv = "1.0"
lazy_static = "1.4.0"
libc = "0.2.0"
llvm-sys = { version="60.0.3", optional=true}
log = "0.3.8"
memoffset = "0.5.4"
num-integer = "0.1"
regex = "1.3"
time = "0.1.38"
uuid = { version = "0.7.1", features = ["v4"] }
